# lspwelcomebot

./: .gitignore  .replit  README.md  bot.service  main.py  pyproject.toml  requirements.txt
.github/workflows/: bot.yml
hosting/: hosting.txt
