[tool.poetry]
name = "lspwelcomebot"
version = "0.1.0"
description = "Discord welcome bot with GIF support"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.7.3"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
